# mdn-playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yml  main.py  pyproject.toml
config/: hparams.yaml  train_params.yaml
data/02_output/example_dataset/: Conditional_Mode.html  Means.html  Sampled_Predictions.html  hparams.yaml  train_val_data.html
data/02_output/weather_dataset_example/: histo_y_true_vs_y_pred.html  hparams.yaml  scatter_y_true_vs_y_pred.html
mdn/: dataset.py  evaluate.py  model.py  optimize.py  sampler.py  train_example.py  train_from_csv.py  visualization.py
